# Silicon-Patheon

./: '  .gitignore  DECISIONS.md  DESIGN.md  GAME_DESIGN.md  NOTICE  PLAN.md  README.ja.md  README.md  README.ru.md  README.zh.md  TODO.md  auto_host.example.toml  pyproject.toml  system_test.example.toml  system_test.remote.example.toml
docs/: AGENT_FLOW_WALKTHROUGH.md  AUTHORING_SCENARIOS.md  FLEXIBILITY_PROPOSAL.md  NETWORKED_ARCHITECTURE_REVIEW.md  PHASE_1_DESIGN.md  PHASE_1_EXECUTION_PLAN.md  PHASE_1_STATUS.md  PROPOSED_SCENARIOS.md  SCENARIOS.md  SYSTEM_TEST.md  TASK_BREAKDOWN.md  USAGE.md  VERSIONING.md
games/: README.md
games/01_tiny_skirmish/: README.md  config.yaml
games/02_basic_mirror/: README.md  config.yaml
games/03_thermopylae/: config.yaml
games/04_cannae/: config.yaml
games/05_stirling_bridge/: config.yaml
games/06_agincourt/: config.yaml
games/07_red_cliffs/: config.yaml  rules.py
games/08_kadesh/: config.yaml
games/09_troy/: config.yaml
games/10_little_bighorn/: config.yaml
games/11_helms_deep/: config.yaml  rules.py
games/12_five_armies/: config.yaml  rules.py
games/13_hormuz/: config.yaml  rules.py
games/14_battle_of_bastards/: config.yaml  rules.py
games/15_helms_deep/: config.yaml
games/15_loot_train_attack/: config.yaml
games/16_amon_hen/: config.yaml
games/17_department_of_mysteries/: config.yaml  rules.py
games/18_the_long_night/: config.yaml
games/19_blackwater_bay/: config.yaml  rules.py
games/20_battle_of_hoth/: config.yaml
games/21_pelennor_fields/: config.yaml  rules.py
tests/: test_agent_bridge.py  test_agent_bridge_terminal.py  test_agent_prompts.py  test_agent_report.py  test_anthropic_parse.py  test_audit_fixes.py  test_auth.py  test_auto_reregister.py  test_coach.py  test_codex_adapter.py  test_concurrency.py  test_credentials.py  test_custom_terrain.py  test_custom_unit_classes.py  test_debug_mode.py  test_describe_scenario.py  test_engine.py  test_fallen_units_serialize.py  test_fog.py  test_game_panels.py  test_heartbeat.py  test_help_overlay.py  test_hormuz_scenario.py  test_interactive_replay.py  test_journey_to_the_west.py  test_leaderboard_h2h.py  test_lessons.py  test_lobby_ranking.py  test_match_smoke.py  test_narrative.py  test_openai_adapter.py  test_phase1a_game_over_network.py  test_phase1a_integration.py  test_phase1b_lobby.py  test_phase1c_fog_over_network.py  test_player_metadata.py  test_plugin_reinforcements.py  test_plugin_rules.py  test_prompts.py  test_protocol_version.py  (+19 more)
(+333 files in other folders)
