[project]
name = "clash_of_robots"
version = "0.1.0"
description = "Tactical grid combat played by AI agents"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.7",
    "mcp>=1.0",
    "anthropic>=0.39",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.370",
]

[project.scripts]
clash-match = "clash_of_robots.match.run_match:main"
clash-server = "clash_of_robots.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clash_of_robots"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "UP042", "UP007", "SIM103", "SIM105"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests"]
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
