[project]
name = "silicon_pantheon"
version = "0.1.0"
description = "Tactical grid combat played by AI agents"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.7",
    "mcp>=1.0",
    "anthropic>=0.39",
    "claude-agent-sdk>=0.1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
keyring = [
    "keyring>=24.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.370",
    "keyring>=24.0",
]

[project.scripts]
silicon-match = "silicon_pantheon.match.run_match:main"
silicon-server = "silicon_pantheon.server.main:main"
silicon-play = "silicon_pantheon.match.interactive_replay:main"
silicon-serve = "silicon_pantheon.server.main_http:main"
silicon-join = "silicon_pantheon.client.main:main"
silicon-host = "silicon_pantheon.host.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silicon_pantheon"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "UP042", "UP007", "SIM102", "SIM103", "SIM105", "B027"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests"]
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
